--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,3 @@
-@import 'modules/variables';
 @import 'mixin';
 @import 'modules/hero-slider';
 
@@ -313,6 +312,15 @@ a {
         transform: rotate(-45deg);
         z-index: 10;
     }
+    &::after {
+        content: "";
+        position: absolute;
+        top: 91.2%;
+        left: 0;
+        width: 100%;
+        height: 5px;
+        background: #000;
+    }
     &__observerArea {
         position: fixed;
         width: 100%;
@@ -372,15 +380,6 @@ a {
         left: 20px;
         white-space: nowrap;
         transition: .3s;
-        &::after {
-            content: "";
-            position: absolute;
-            top: 80%;
-            left: -100vw;
-            width: 200vw;
-            height: 5px;
-            background: #000;
-        }
         &__title-logo-char {
             color: black;
             font-size: 3.9em;
