--- a/styles/style.css
+++ b/styles/style.css
@@ -329,15 +329,25 @@ a {
 
 .jsFadeIn {
   opacity: 0;
-  -webkit-transform: translateY(50px);
-          transform: translateY(50px);
+  -webkit-transition: 1s;
+  transition: 1s;
   -webkit-transition-property: opacity;
   transition-property: opacity;
+}
+
+.jsFadeIn.scrolled {
+  opacity: 1;
+}
+
+.jsFadeInUp {
+  opacity: 0;
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
   -webkit-transition: 1s;
   transition: 1s;
 }
 
-.jsFadeIn.scrolled {
+.jsFadeInUp.scrolled {
   opacity: 1;
   -webkit-transform: translateY(0);
           transform: translateY(0);
@@ -568,7 +578,6 @@ a {
 }
 
 .profile__profile-1 {
-  position: relative;
   width: 100%;
   height: 50vh;
 }
@@ -576,8 +585,9 @@ a {
 .profile__profile-1__left {
   position: absolute;
   width: 30%;
-  height: 100%;
+  height: 52%;
   margin-top: 10%;
+  z-index: 2;
 }
 
 .profile__profile-1__left .profile-icon {
@@ -592,7 +602,7 @@ a {
 
 .profile__profile-1__right {
   position: absolute;
-  top: 30%;
+  top: 130%;
   right: 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -604,7 +614,7 @@ a {
       -ms-flex-align: center;
           align-items: center;
   width: 70%;
-  height: 200%;
+  height: 100%;
 }
 
 .profile__profile-1__right::before {
@@ -619,11 +629,13 @@ a {
 .profile__profile-1__right span {
   display: block;
   position: absolute;
-  top: 180%;
+  top: 150%;
   right: 5%;
   width: 120%;
   height: 80%;
-  background: #9c580429;
+  background: url("/images/bg-front01.JPG") no-repeat center;
+  background-size: cover;
+  z-index: -1;
 }
 
 .profile__profile-1__right .profile-name {
