--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,10 @@ a {
   text-decoration: none;
 }
 
+.sections {
+  padding-top: 10vh;
+}
+
 .more-text {
   width: 100%;
   display: none;
@@ -364,7 +368,7 @@ a {
   position: fixed;
   top: 0;
   left: 0;
-  background: url("/images/main-visual-img.png") no-repeat center;
+  background: url("/images/main-visual-img.jpg") no-repeat center;
   background-size: cover;
   z-index: -99;
 }
@@ -381,7 +385,7 @@ a {
   position: relative;
   width: 100%;
   height: 75vh;
-  background: url("/images/main-visual-img.png") no-repeat center;
+  background: url("/images/main-visual-img.jpg") no-repeat center;
   background-size: cover;
   margin-bottom: 28vh;
 }
@@ -577,151 +581,101 @@ a {
   }
 }
 
-.profile__profile-1 {
+.profile {
+  position: relative;
   width: 100%;
   height: 50vh;
+  margin-bottom: 10%;
 }
 
-.profile__profile-1__left {
+.profile__profile-bg-inner {
   position: absolute;
-  width: 30%;
-  height: 52%;
-  margin-top: 10%;
-  z-index: 2;
-}
-
-.profile__profile-1__left .profile-icon {
-  width: 80%;
-  height: 100%;
-  margin-left: 5%;
-  background: url(/images/profile-icon.png) center;
-  background-size: cover;
-  -webkit-box-shadow: 5px 5px 10px #222;
-          box-shadow: 5px 5px 10px #222;
-}
-
-.profile__profile-1__right {
-  position: absolute;
-  top: 130%;
-  right: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 70%;
+  width: 100%;
   height: 100%;
 }
 
-.profile__profile-1__right::before {
+.profile__profile-bg-inner__profile-bg {
   content: "";
   display: block;
   position: absolute;
+  top: -40%;
+  left: -10%;
+  width: 90%;
+  height: 150%;
+  background: url("/images/bg-front01.jpg") no-repeat center;
+  background-size: cover;
+  -webkit-filter: grayscale(80%);
+          filter: grayscale(80%);
+  -webkit-transform: skewX(-8deg);
+          transform: skewX(-8deg);
+}
+
+.profile__left {
+  position: absolute;
+  top: 190%;
   width: 100%;
   height: 100%;
-  background-color: #fffefc;
+  z-index: 2;
 }
 
-.profile__profile-1__right span {
-  display: block;
+.profile__left .profile-icon {
   position: absolute;
-  top: 150%;
-  right: 5%;
-  width: 120%;
-  height: 80%;
-  background: url("/images/bg-front01.JPG") no-repeat center;
+  top: -50%;
+  left: 3%;
+  width: 35%;
+  height: 50vh;
+  background: url(/images/profile-icon.jpg) center;
   background-size: cover;
-  z-index: -1;
+  border: solid #52483c;
 }
 
-.profile__profile-1__right .profile-name {
+.profile__right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  position: absolute;
+  top: -10%;
+  right: 0;
+  width: 80%;
+  height: 90vh;
+  background-color: #fffefc;
+  -webkit-box-shadow: 1px 5px 5px #444;
+          box-shadow: 1px 5px 5px #444;
+}
+
+.profile__right .profile-name {
   font-size: 1.5rem;
   font-weight: bold;
-  margin: 10px 3% 0 auto;
+  margin: 10% 5% 0 auto;
   -webkit-writing-mode: vertical-rl;
       -ms-writing-mode: tb-rl;
           writing-mode: vertical-rl;
 }
 
-.profile__profile-1__right .profile-en-name {
+.profile__right .profile-en-name {
   font-size: .7rem;
-  margin: 10px 3% 0 auto;
+  margin: 1% 5% 0 auto;
   -webkit-writing-mode: vertical-rl;
       -ms-writing-mode: tb-rl;
           writing-mode: vertical-rl;
 }
 
-.profile__profile-1__right .profile-my-background {
+.profile__right .profile-my-background {
   font-size: .8rem;
-  margin: 25% 5% 0 5%;
+  margin: 15% 5% 0 19%;
   line-height: 25px;
 }
 
-.profile__profile-1__right .profile-intro {
+.profile__right .profile-intro {
   font-size: .6rem;
-  margin: 10px 5% 0 5%;
+  margin: 6% 5% 10% 19%;
   line-height: 25px;
-}
-
-.profile__profile-2 {
-  text-align: right;
-  width: 100%;
-  font-size: .9rem;
-  line-height: 25px;
-  border-radius: 9px;
-}
-
-.profile__profile-2 .profile-skills {
-  position: relative;
-  color: white;
-  border-top: white solid .5px;
-}
-
-.profile__profile-2 .profile-skills:nth-child(3) {
-  border-bottom: white solid .5px;
-}
-
-.profile .profile__profile-3 {
-  padding: 20px 0 0 0;
-  text-align: center;
-  line-height: 25px;
-}
-
-.profile .profile__profile-3__left {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 50%;
-  height: 400px;
-}
-
-.profile .profile__profile-3__right {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 50%;
-  height: 400px;
-  margin: 0 auto;
 }
 
 .skills {
