--- a/styles/style.scss
+++ b/styles/style.scss
@@ -450,7 +450,7 @@ a {
     width: 100%;
     height: 50vh;
     // referc
-    margin-bottom: 10%; 
+    // margin-bottom: 10%; 
     &__profile-bg-inner { 
         position: absolute;
         width: 100%;
