--- a/styles/_mixin.scss
+++ b/styles/_mixin.scss
@@ -43,8 +43,8 @@
 
 $c-1: #9c580429;
 $c-2: #fffaf0;
-$c-3: #fffefc;
-$c-4: #f1e7df;
+$c-3: rgb(255, 254, 252);
+$c-4: #000;
 $c-5: #52483c;
 $c-6: #736457;
 $c-7: #887e6c;
