--- a/styles/breakpoints/_1280up.scss
+++ b/styles/breakpoints/_1280up.scss
@@ -3,16 +3,8 @@
 Stylesheet: 1280px以上のモニタで適用
 
 ******************************************************************/
-.travel {
-  &__inner {
-    padding: 50px 150px;
-  }
-}
-.popular {
-  &__item {
-    flex-basis: 23%;
-  }
-}
-.side {
-  display: block;
+
+
+.skill-body {
+  margin: 0 30px; 
 }
