--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,635 +1,25 @@
 @import 'mixin';
 @import 'modules/hero-slider';
 
-// @import "breakpoints/base";
+@import "breakpoints/base";
 
-// @media (min-width: 480px) {
-//   @import "breakpoints/480up";
-// }
+@media (min-width: 480px) {
+  @import "breakpoints/480up";
+}
 
-// @media (min-width: 600px) {
-//   @import "breakpoints/600up";
-// }
+@media (min-width: 600px) {
+  @import "breakpoints/600up";
+}
 
-// @media (min-width: 960px) {
-//   @import "breakpoints/960up";
-// }
+@media (min-width: 960px) {
+  @import "breakpoints/960up";
+}
 
-// @media (min-width: 1280px) {
-//   @import "breakpoints/1280up";
-// }
+@media (min-width: 1280px) {
+  @import "breakpoints/1280up";
+}
 
 // @media (min-resolution: 192dpi) //Retinaディスプレイ
 //       ,(-webkit-min-device-pixel-ratio: 2) {
 //   @import "breakpoints/2x";
-// }
-
-// ■ Layer-Foundation
-html {
-    height: 100vh;
-    scroll-behavior: smooth;
-}
-
-body {
-    z-index: 0;
-    font-family: 'Krona One', 'Karla', 'Source Sans Pro','NotoSansCJKjp', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', sans-serif;
-}
-
-ul {
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
-}
-
-.sections {
-    padding-top: 10vh;
-}
-
-.more-text {
-    width: 100%;
-    display: none;
-    transition: .3s;
-    transform-origin: top;
-    &.show {
-        display: inline-block;
-    }
-}
-
-.read-more-area {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-}
-
-//////////////////////////////////////////////////////////////////////////////////////////////////////////
-// Loader
-//////////////////////////////////////////////////////////////////////////////////////////////////////////
-.rect-spinner {
-    margin: 100px auto;
-    width: 50px;
-    height: 40px;
-    text-align: center;
-    letter-spacing: -2px;
-    & > div {
-        height: 100%;
-        width: 6px;
-        display: inline-block;
-        @include animation(
-            $name: sk-stretchdelay,
-            $duration: 1.2s,
-            $iteration-count: infinite,
-            $timing-function: ease-in-out,
-            );
-            @for $i from 1 through 5 {
-                &:nth-child(#{$i}) {
-                    animation-delay: -1.3s + $i * 0.1s;
-                }
-            }
-    }
-}
-
-@keyframes sk-stretchdelay {
-    0%,
-    40%,
-    100% {
-        transform: scaleY(0.4);
-    }
-    20% {
-        transform: scaleY(1);
-    }
-}
-
-
-//////////////////////////////////////////////////////////////////////////////////////////////////////////
-// Back Ground
-//////////////////////////////////////////////////////////////////////////////////////////////////////////
-.bg-img{
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    background-image: url("/images/bg-img.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    z-index: -100;
-}
-
-
-
-//////////////////////////////////////////////////////////////////////////////////////////////////////////
-// Nav
-//////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-.nav {
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    top: 0;
-    right: -50%;
-    min-height: 100vh;
-    width: 50%;
-    z-index: 10;
-    background-color: rgba($color: #000000, $alpha: .8);
-    transition: transform .4s;
-    &.show {
-        transform: translateX(-100%);
-    }   
-    & ul{
-        text-align: center;
-        margin-top: 100px;
-        & li{
-            border-bottom: solid  #000 1px;
-        }
-        & a{
-            line-height: 60px;
-            font-size: 1em;
-            color: white;
-        }
-    }
-    &__closing-target {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: -100%;
-        width: 100%;
-        min-height: 100vh;
-        z-index: 10;
-        cursor: pointer;
-        &.show {
-            display: block;
-        }
-    }
-    &__menu-icon {
-        position: fixed;
-        top: 20px;
-        right: 2%;
-        width: 35px;
-        height: 45px;
-        padding-left: 10px;
-        border-radius: 9px;
-        z-index: 11;
-        cursor: pointer;
-        &.show {
-            & span {
-                background-color: #fff;
-                &:nth-child(1) {
-                    transform: translate(-12px, 21px) rotate(-630deg);
-                }
-                &:nth-child(2) {
-                    transform: translate(-3px, 3px) scaleX(.7) rotate(330deg);
-                }
-                &:nth-child(3) {
-                    transform: translate(-3px, 4px) scaleX(.8) rotate(30deg); 
-                }
-            }
-        }
-        & > span {
-            display: block;
-            width: 30px;
-            height: 2px;
-            margin-bottom: 9px;
-            background-color: black;
-            transition: 0.7s;
-        }
-    }
-}
-
-  
-// .menu-icon.show {
-//     & span {
-//         background-color: #fff;
-//         &:nth-child(1) {
-//             transform: translate(-12px, 21px) rotate(-630deg);
-//         }
-//         &:nth-child(2) {
-//             transform: translate(-3px, 3px) scaleX(.7) rotate(330deg);
-//         }
-//         &:nth-child(3) {
-//             transform: translate(-3px, 4px) scaleX(.8) rotate(30deg); 
-//         }
-//     }
-// }
-
-
-.h-fade-in {
-    position: relative;
-    width: 0%;
-    padding: 10vh 0;
-    background-color: $c-7;
-    text-align: right;
-    z-index: 1;
-    transition: .5s;
-    transform: skewY(3deg);
-    &.scrolled {
-        width: 70%;
-    }
-    &__body {
-        display: block;
-        position: relative;
-        opacity: 0;
-        width: 95%;
-        font-size: 1rem;
-        letter-spacing: -10px;
-        line-height: 25px;
-        color: white;
-        transition: .5s;
-        transition-property: transform, opacity, letter-spacing;
-        transform: scaleX(0);
-        transform-origin: right;
-        &.scrolled{
-            letter-spacing: 20px;
-            opacity: 1;
-            transform: scaleX(1);
-        }
-        &::after {
-            content: "";
-            display: block;
-            height: 4px;
-            width: 65%;
-            margin-top: 10px;
-            margin-left: auto;
-            background-color: $c-6;
-        }
-    }
-}
-
-.jsFadeIn {
-    opacity: 0;
-    transition: 1s;
-    transition-property: opacity;
-    &.scrolled {
-        opacity: 1;
-    }
-}
-
-.jsFadeInUp {
-    opacity: 0;
-    transform: translateY(50px);
-    transition: 1s;
-    &.scrolled {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-//////////////////////////////////////////////////////////////////////////////////////////////////////////
-// Main Contents
-//////////////////////////////////////////////////////////////////////////////////////////////////////////
-.sections-container{
-    width: 100%;
-    background-color: $c-4;
-}
-
-.bg-target01 {
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: url("/images/main-visual-img.jpg") no-repeat center;
-    background-size: cover;
-    z-index: -99;
-    &::before {
-        content: "";
-        width: 100%;
-        height: 100%;
-        position: fixed;
-        background-color: rgba(0, 0, 0, 0.9);
-    }
-}
-
-//////////////////////////////////////////////////////////////////////////////////////////////////////////
-// Main Section
-//////////////////////////////////////////////////////////////////////////////////////////////////////////
-.main-visual {
-    position: relative;
-    width: 100%;
-    height: 75vh;
-    background: url("/images/main-visual-img.jpg") no-repeat center;
-    background-size: cover;
-    margin-bottom: 28vh;
-    &::before{
-        content: "'s portfolio site";
-        position: absolute;
-        color: white;
-        top: 70px;
-        left: -15px;
-        transform: rotate(-45deg);
-        z-index: 10;
-    }
-    &::after {
-        content: "";
-        position: absolute;
-        top: 91.2%;
-        left: 0;
-        width: 100%;
-        height: 5px;
-        background: #000;
-    }
-    &__observerArea {
-        position: fixed;
-        width: 100%;
-        height: 10vh;
-    }
-    &__overlay-top {
-        position: absolute;
-        top: -20%;
-        left: -10%;
-        width: 110%;
-        height: 35%;
-        background-color: #3a281280;
-        transform: skewY(-8deg);
-    }
-    &__overlay-left {
-        position: absolute;
-        width: 50%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.3);
-    }
-    &__overlay-right {
-        @extend .main-visual__overlay-left;
-        right: 0;
-        background-color: rgba(255, 255, 255, 0.35);
-    }
-    &__title-logo-inner-right{
-        position: absolute;
-        top: 30%;
-        right: 20px;
-        white-space: nowrap;
-        transition: .3s;
-        &__title-logo-kt{
-            color: white;
-            letter-spacing: 7px;
-            font-size: 8em;
-            @include query-md {
-                font-size: 6em;
-            }
-            @include query-sm {
-                font-size: 4.5em;
-            }
-        }
-        @include query-sm {
-            right: -14px;
-            transform: scaleX(.8);
-        }
-        &.scrolled{
-            transform: translateX(-55vw);
-            @include query-sm {
-                transform: translateX(-50vw) scaleX(.8);
-            }
-        }
-    }
-    &__title-logo-inner-left{
-        position: absolute;
-        top: 80%;
-        left: 20px;
-        white-space: nowrap;
-        transition: .3s;
-        &__title-logo-char {
-            color: black;
-            font-size: 3.9em;
-            letter-spacing: 7px;
-            @include query-md {
-                letter-spacing: 3px;
-                font-size: 3em;
-            }
-            @include query-sm {
-                letter-spacing: 0;
-                font-size: 1.7em;
-            }
-        }
-        @include query-sm {
-            left: 10px;
-        }
-        &.scrolled{
-            transform: translateX(55vw);
-        }
-    }
-    &__arrow-inner {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        filter: blur(1px);
-        &__arrow {
-            position: absolute;
-            top: 113%;
-            left: 50%;
-            width: 96px;
-            height: 70px;
-            @include animation(
-                $name: up-down,
-                $duration: 1.2s,
-                $iteration-count: infinite,
-                $timing-function: ease-in-out,
-                );
-            @keyframes up-down {
-                0%,
-                100% {
-                    transform: translateX(-50%) translateY(-10%);
-                }
-                50% {
-                    transform: translateX(-50%) translateY(10%);
-                }
-            }            
-        }
-    }
-}
-
-//////////////////////////////////////////////////////////////////////////////////////////////////////////
-// profile Section
-//////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-.profile {
-    position: relative;
-    width: 100%;
-    height: 50vh;
-    // referc
-    // margin-bottom: 10%; 
-    &__profile-bg-inner { 
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        &__profile-bg {
-            content: "";
-            display: block;
-            position: absolute;
-            top: -40%;
-            left: -10%;
-            width: 90%;
-            height: 150%;
-            background: url('/images/bg-front01.jpg') no-repeat center;
-            background-size: cover;
-            filter: grayscale(80%);
-            transform: skewX(-8deg);
-        }
-    }
-    &__left {
-        position: absolute;
-        top: 190%;
-        width: 100%;
-        height: 100%;
-        z-index: 2;
-        & .profile-icon {
-            position: absolute;
-            top: -50%;
-            left: 3%;
-            width: 35%;
-            height: 50vh;
-            background: url(/images/profile-icon.jpg) center;
-            background-size: cover;
-            border: solid $c-5;
-        }
-    }
-    &__right {
-        display: flex;
-        justify-content: center;
-        align-items: flex-end;
-        position: absolute;
-        top: -10%;
-        right: 0;
-        width: 80%;
-        height: 90vh;
-        background-color: $c-3;
-        box-shadow: 1px 5px 5px #444;
-        & .profile-name {
-            font-size: 1.5rem;
-            font-weight: bold;
-            margin: 10% 5% 0 auto;
-            writing-mode: vertical-rl;
-        }
-        & .profile-en-name {
-            font-size: .7rem;
-            margin: 1% 5% 0 auto;
-            writing-mode: vertical-rl;
-        }
-        & .profile-my-background {
-            font-size: .8rem;
-            margin: 15% 5% 0 19%;
-            line-height: 25px;
-        }
-        & .profile-intro {
-            font-size: .6rem;
-            margin: 6% 5% 10% 19%;
-            line-height: 25px;
-        }
-    }
-}
-    // &__profile-2 {
-    //     text-align: right;
-    //     width: 100%;
-    //     // margin: 0 auto 60px auto;
-    //     font-size: .9rem;
-    //     line-height: 25px;
-    //     border-radius: 9px;
-    //     & .profile-skills {
-    //         position: relative;
-    //         // width: 100%;
-    //         // height: 150px;
-    //         color: white;
-    //         border-top: white solid .5px;
-    //         // padding: 50px;
-    //         &:nth-child(3) {
-    //             border-bottom: white solid .5px;
-    //         }
-    //     }
-    // }
-    // & .profile__profile-3 {
-    //     padding: 20px 0 0 0;
-    //     text-align: center;
-    //     line-height: 25px;
-    //     &__left {
-    //         display: flex;
-    //         flex-direction: column;
-    //         justify-content: center;
-    //         align-items: center;
-    //         width: 50%;
-    //         height: 400px;
-    //     }
-    //     &__right {
-    //         display: flex;
-    //         justify-content: center;
-    //         align-items: center;
-    //         width: 50%;
-    //         height: 400px;
-    //         margin: 0 auto;
-    //     }
-    // }
-
-// .canvasWrapper {
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 100%;
-//     z-index: -1;
-// }
-
-//////////////////////////////////////////////////////////////////////////////////////////////////////////
-// Skills Section
-//////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-.skills {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    text-align: right;
-    width: 100%;
-    // margin: 0 auto 60px auto;
-    font-size: .9rem;
-    line-height: 25px;
-    border-radius: 9px;
-    // width: 100%;
-    // height: 150px;
-    border-top: white solid .5px;
-    // padding: 50px;
-    margin: 10vh 0;
-    &:nth-child(3) {
-        border-bottom: white solid .5px;
-    }
-    &__skill {
-        position: relative;
-        width: 30%;
-        overflow: hidden;
-        pointer-events: none;
-        background-color: $c-3;
-        border-radius: 1rem;
-        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.22);
-        & p {
-            font-size: .7rem;
-        }
-    }
-    &__skill-2 {
-        position: relative;
-        width: 30%;
-
-    }
-    &__skill-3 {
-        position: relative;
-        width: 30%;
-
-    }
-}
-
-//////////////////////////////////////////////////////////////////////////////////////////////////////////
-// Works Section
-//////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-// .works {
-//     // & .h-fade-in {
-//     //     &__h-fade-in-body {
-//     //         transform-origin: left;
-//     //         &::after {
-//     //             margin-left: 0;
-//     //         }
-//     //     }
-//     //     &__h-fade-in-cover {
-//     //         transform-origin: left;
-//     //     }
-//     // }
 // }
