--- a/styles/breakpoints/_base.scss
+++ b/styles/breakpoints/_base.scss
@@ -38,6 +38,7 @@ a {
 
 section {
     position: relative;
+    // overflow: hidden;
 }
 
 .font-sm {
@@ -227,7 +228,7 @@ section {
 .sections-container{
     width: 100%;
     background-color: $c-4;
-    overflow: hidden;
+    overflow: visible;
 }
 
 .global-bg-container { 
@@ -357,7 +358,7 @@ section {
         position: absolute;
         width: 100%;
         height: 100%;
-        filter: blur(1px);
+        filter: blur(.5px);
         will-change: transform;
         &__arrow {
             position: absolute;
