--- a/styles/style.css
+++ b/styles/style.css
@@ -239,7 +239,7 @@ section {
 .sections-container {
   width: 100%;
   background-color: #000;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .global-bg-container {
@@ -378,8 +378,8 @@ section {
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-filter: blur(1px);
-          filter: blur(1px);
+  -webkit-filter: blur(0.5px);
+          filter: blur(0.5px);
   will-change: transform;
 }
 
