--- a/styles/breakpoints/_600up.scss
+++ b/styles/breakpoints/_600up.scss
@@ -59,9 +59,10 @@ Stylesheet: 600px以上のタブレットやモニタで適用
   .profile {
     &__left {
         & .profile-icon {
+          top: 180px;
           left: 15%;
-          width: 300px;
-          height: 250px;
+          width: 370px;
+          height: 300px;
         }
     }
     &__right {
@@ -70,7 +71,7 @@ Stylesheet: 600px以上のタブレットやモニタで適用
                 margin: 7px 5% 0 auto;
             }
             & .profile-my-background {
-                top: 0%;
+                top: 2%;
                 right: 10px;
             }
             & .profile-intro {
