--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
 .swiper-container {
-  width: 90%;
-  height: 300px;
+  position: relative;
+  width: 100%;
+  margin: 0;
 }
 
 .swiper-slide {
-  height: 300px;
-  overflow: hidden;
+  width: 100%;
 }
 
 .swiper-slide > img {
@@ -14,22 +14,26 @@
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  -webkit-transform: scale(1.3);
-          transform: scale(1.3);
-  -webkit-transition: -webkit-transform .9s ease;
-  transition: -webkit-transform .9s ease;
-  transition: transform .9s ease;
-  transition: transform .9s ease, -webkit-transform .9s ease;
 }
 
-.swiper-slide-active > img {
-  -webkit-transform: none;
-          transform: none;
+.swiper-pagination-bullets {
+  height: 80px;
+  overflow: scroll;
+  white-space: nowrap;
 }
 
-.hero {
-  z-index: 20;
-  padding: 100px 0;
+.swiper-pagination-bullets .swiper-pagination-bullet {
+  display: inline-block;
+  width: 20%;
+  height: 100%;
+  margin: 8px 4px;
+}
+
+.swiper-pagination-bullets .swiper-pagination-bullet > img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .work-title {
@@ -53,6 +57,7 @@ body {
   height: 100%;
   z-index: 0;
   font-family: 'Krona One', 'Karla', 'Source Sans Pro','NotoSansCJKjp', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', sans-serif;
+  color: #fff;
 }
 
 ul {
@@ -63,15 +68,11 @@ a {
   text-decoration: none;
 }
 
-section {
-  position: relative;
-}
-
 .font-sm, .profile__right__profile-wrapper .profile-my-background, .profile__right__profile-wrapper .profile-intro, .skills__skills-wrapper__skill-1 .skill-body, .skills__skills-wrapper__skill-2 .skill-body, .skills__skills-wrapper__skill-3 .skill-body {
   font-size: 11px;
 }
 
-.font-md, .h-fade-in__body, .profile__right__profile-wrapper .profile-en-name, .skills__skills-wrapper__skill-1 .skill-title, .skills__skills-wrapper__skill-2 .skill-title, .skills__skills-wrapper__skill-3 .skill-title {
+.font-md, .nav ul a, .h-fade-in__body, .profile__right__profile-wrapper .profile-en-name, .about-section .about__about-header, .skills__skills-wrapper__skill-1 .skill-title, .skills__skills-wrapper__skill-2 .skill-title, .skills__skills-wrapper__skill-3 .skill-title {
   font-size: 14px;
 }
 
@@ -97,6 +98,34 @@ section {
 
 .line-h-lg, .skills__skills-wrapper__skill-1 .skill-body, .skills__skills-wrapper__skill-2 .skill-body, .skills__skills-wrapper__skill-3 .skill-body {
   line-height: 24px;
+}
+
+.jsFadeIn, .jsFadeInDelay, .jsFadeInOut, .jsFadeInOutDelay {
+  opacity: 0;
+  -webkit-transition: .7s;
+  transition: .7s;
+  -webkit-transition-property: opacity;
+  transition-property: opacity;
+}
+
+.jsFadeIn.scrolled, .scrolled.jsFadeInDelay, .scrolled.jsFadeInOut, .scrolled.jsFadeInOutDelay {
+  opacity: 1;
+}
+
+.jsFadeInUp {
+  opacity: 0;
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
+  -webkit-transition: .4s;
+  transition: .4s;
+  -webkit-transition-property: opacity transform;
+  transition-property: opacity transform;
+}
+
+.jsFadeInUp.scrolled {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
 .nav {
@@ -131,13 +160,12 @@ section {
 }
 
 .nav ul li {
-  border-bottom: solid  #ffffff59 1px;
+  border-bottom: solid  #ffffff59 .5px;
 }
 
 .nav ul a {
   line-height: 60px;
-  font-size: 1em;
-  color: white;
+  color: #fff;
 }
 
 .nav__closing-target {
@@ -168,7 +196,7 @@ section {
 }
 
 .nav__menu-icon.show span {
-  background-color: #fff;
+  background-color: #ff00007a;
 }
 
 .nav__menu-icon.show span:nth-child(1) {
@@ -196,89 +224,155 @@ section {
   transition: 0.7s;
 }
 
-.jsFadeIn, .jsFadeInDelay, .jsFadeInOutDelay {
-  opacity: 0;
-  -webkit-transition: .5s;
-  transition: .5s;
-  -webkit-transition-property: opacity;
-  transition-property: opacity;
-}
-
-.jsFadeIn.scrolled, .scrolled.jsFadeInDelay, .scrolled.jsFadeInOutDelay {
-  opacity: 1;
-}
-
-.jsFadeInUp {
-  opacity: 0;
-  -webkit-transform: translateY(50px);
-          transform: translateY(50px);
-  -webkit-transition: .7s;
-  transition: .7s;
-  -webkit-transition-property: opacity transform;
-  transition-property: opacity transform;
-}
-
-.jsFadeInUp.scrolled {
-  opacity: 1;
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-}
-
-.jsFadeInOut {
-  opacity: 0;
-  -webkit-transition: .5s;
-  transition: .5s;
-  -webkit-transition-property: opacity;
-  transition-property: opacity;
-}
-
-.jsFadeInOut.scrolled {
-  opacity: 1;
-}
-
 .sections-container {
-  width: 100%;
-  background-color: #000;
-  overflow: visible;
-}
-
-.global-bg-container {
   position: relative;
-  top: 0;
   width: 100%;
-  height: 0;
-  z-index: 0;
-  will-change: transform;
+  background: linear-gradient(198deg, white 0%, #f4f4f4 100%);
 }
 
-.global-bg-container__bg-left-1 {
+.bgSpan::after {
+  content: "";
   position: absolute;
-  left: -15%;
-  margin-top: 900px;
-  opacity: .7;
-  width: 90vw;
-  height: 300px;
-  background: url("/images/bg-front01.jpg") no-repeat center;
-  background-size: cover;
-  -webkit-filter: grayscale(80%);
-          filter: grayscale(80%);
-  -webkit-transform: skew(-8deg);
-          transform: skew(-8deg);
+  top: -50%;
+  left: -500%;
+  width: 800px;
+  height: .5px;
+  -webkit-transform: translateY(-50%) rotate(45deg) skewX(87deg) scaleY(0.2);
+          transform: translateY(-50%) rotate(45deg) skewX(87deg) scaleY(0.2);
+  background: #000;
 }
 
-.global-bg-container__bg-right-1 {
+.bgSpan.cChanged {
+  background-color: #ff00007a !important;
+}
+
+.bgSectionTitlesWrapper {
   position: absolute;
-  left: 35%;
-  margin-top: 1500px;
-  opacity: .7;
+  top: 80vh;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  font-size: 7vh;
+  letter-spacing: 4vh;
+  -webkit-writing-mode: vertical-rl;
+      -ms-writing-mode: tb-rl;
+          writing-mode: vertical-rl;
+  text-orientation: upright;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.bgSectionTitlesWrapper .bgSectionTitles {
+  padding-top: 10vh;
+  color: #80808061;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.bgSectionTitlesWrapper .bgSectionTitles.cChanged {
+  color: #ff00007a;
+}
+
+.bgSectionTitlesWrapper .bgSectionTitles::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 95%;
+  left: 10vw;
   width: 90vw;
-  height: 300px;
-  background: url("/images/bg-front02.jpg") no-repeat center;
-  background-size: cover;
-  -webkit-filter: grayscale(80%);
-          filter: grayscale(80%);
-  -webkit-transform: skew(8deg);
-          transform: skew(8deg);
+  height: 1px;
+  background-color: #000;
+}
+
+.bgSectionTitlesWrapper .scrollmagic-pin-spacer {
+  min-width: unset !important;
+}
+
+.bgSectionTitlesWrapper .bgSectionTitlesOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  -webkit-transition: .5s;
+  transition: .5s;
+  opacity: .95;
+}
+
+.bgSectionTitlesWrapper .bgSectionTitlesOverlay.cChanged {
+  background-color: #000000d9;
+  opacity: 1;
+}
+
+.h-fade-in {
+  position: relative;
+  width: 70%;
+  padding: 57px 0;
+  background-color: #887e6c;
+  text-align: right;
+  color: #fff;
+  z-index: 10;
+  -webkit-transition: .3s;
+  transition: .3s;
+  -webkit-transform: scaleX(0) skewY(3deg);
+          transform: scaleX(0) skewY(3deg);
+  -webkit-transform-origin: left;
+          transform-origin: left;
+  -webkit-box-shadow: 1px 1px 10px #000;
+          box-shadow: 1px 1px 10px #000;
+}
+
+.h-fade-in.cChanged {
+  background-color: #ff00007a;
+}
+
+.h-fade-in.scrolled {
+  -webkit-transform: scaleX(1) skewY(3deg);
+          transform: scaleX(1) skewY(3deg);
+}
+
+.h-fade-in__body {
+  opacity: 0;
+  width: 95%;
+  letter-spacing: -10px;
+  line-height: 25px;
+  -webkit-transition: .3s;
+  transition: .3s;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transform-origin: right;
+          transform-origin: right;
+}
+
+.h-fade-in__body.scrolled {
+  letter-spacing: 15px;
+  opacity: 1;
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+}
+
+.h-fade-in__body::after {
+  content: "";
+  display: block;
+  height: 4px;
+  width: 85%;
+  margin-top: 10px;
+  margin-left: auto;
+  background-color: #736457;
+}
+
+.main-visual-section {
+  position: relative;
+  z-index: 2;
 }
 
 .main-visual {
@@ -287,14 +381,13 @@ section {
   height: 551px;
   background: url("/images/main-visual-img.jpg") no-repeat center;
   background-size: cover;
-  margin-bottom: 206px;
-  z-index: 2;
+  margin-bottom: 100vh;
+  z-index: 3;
 }
 
 .main-visual::before {
   content: "'s portfolio site";
   position: absolute;
-  color: white;
   top: 70px;
   left: -5px;
   -webkit-transform: rotate(-45deg);
@@ -345,7 +438,6 @@ section {
 }
 
 .main-visual__title-logo-inner-right__title-logo-kt {
-  color: white;
   letter-spacing: 7px;
   font-size: 3.5em;
 }
@@ -372,6 +464,7 @@ section {
 .main-visual__title-logo-inner-left__title-logo-char {
   font-size: 1.7em;
   letter-spacing: 0;
+  color: #000;
 }
 
 .main-visual__arrow-inner {
@@ -429,55 +522,9 @@ section {
   }
 }
 
-.h-fade-in {
+.profile-section {
   position: relative;
-  width: 70%;
-  padding: 57px 0;
-  background-color: #887e6c;
-  text-align: right;
-  z-index: 10;
-  -webkit-transition: .3s;
-  transition: .3s;
-  -webkit-transform: scaleX(0) skewY(3deg);
-          transform: scaleX(0) skewY(3deg);
-  -webkit-transform-origin: left;
-          transform-origin: left;
-}
-
-.h-fade-in.scrolled {
-  -webkit-transform: scaleX(1) skewY(3deg);
-          transform: scaleX(1) skewY(3deg);
-}
-
-.h-fade-in__body {
-  opacity: 0;
-  width: 95%;
-  color: white;
-  letter-spacing: -10px;
-  line-height: 25px;
-  -webkit-transition: .3s;
-  transition: .3s;
-  -webkit-transform: scaleX(0);
-          transform: scaleX(0);
-  -webkit-transform-origin: right;
-          transform-origin: right;
-}
-
-.h-fade-in__body.scrolled {
-  letter-spacing: 15px;
-  opacity: 1;
-  -webkit-transform: scaleX(1);
-          transform: scaleX(1);
-}
-
-.h-fade-in__body::after {
-  content: "";
-  display: block;
-  height: 4px;
-  width: 85%;
-  margin-top: 10px;
-  margin-left: auto;
-  background-color: #736457;
+  z-index: 2;
 }
 
 .profile {
@@ -485,7 +532,6 @@ section {
   width: 100%;
   height: 500px;
   pointer-events: none;
-  z-index: 2;
 }
 
 .profile__left {
@@ -497,15 +543,14 @@ section {
 
 .profile__left .profile-icon {
   position: absolute;
-  top: 0;
-  left: 8%;
+  top: 250px;
+  left: 15%;
   width: 230px;
   height: 250px;
   background: url(/images/profile-icon.jpg) center;
   background-size: cover;
-  -webkit-box-shadow: 1px 1px 10px black;
-          box-shadow: 1px 1px 10px black;
-  will-change: transform;
+  -webkit-box-shadow: 1px 1px 20px #000;
+          box-shadow: 1px 1px 20px #000;
 }
 
 .profile__right {
@@ -519,7 +564,7 @@ section {
       -ms-flex-align: center;
           align-items: center;
   position: absolute;
-  top: -15%;
+  top: 0;
   right: 0;
   width: 90%;
   height: 600px;
@@ -531,7 +576,6 @@ section {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  color: #fff;
 }
 
 .profile__right__profile-wrapper .profile-name {
@@ -567,12 +611,14 @@ section {
   font-family: 'Karla', 'Source Sans Pro','NotoSansCJKjp', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', sans-serif;
 }
 
-.about {
+.about-section {
+  position: relative;
   z-index: 2;
+  padding-bottom: 200px;
+  color: #000;
 }
 
-.about__container {
-  position: relative;
+.about-section .about {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -580,29 +626,69 @@ section {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  height: 400vh;
   margin-top: 100px;
+}
+
+.about-section .about__about-header {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 100px;
+  margin: 30px auto 200px auto;
+  border-bottom: ridge #000;
+  letter-spacing: 12px;
   z-index: 2;
 }
 
-.about__container__about-1, .about__container__about-2, .about__container__about-3 {
-  width: 50%;
-  height: 600px;
-  background-image: url("/images/bg-front02.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
+.about-section .about__about-body {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
 }
 
-.about__container__about-2 {
-  background-image: url("/images/bg-front01.jpg");
+.about-section .about__about-1, .about-section .about__about-2, .about-section .about__about-3 {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.about__container__about-3 {
-  background-image: url("/images/bg-front02.jpg");
+.about-section .about__about-1__left, .about-section .about__about-2__left, .about-section .about__about-3__left {
+  width: 100%;
+  height: 350px;
+}
+
+.about-section .about__about-1__right, .about-section .about__about-2__right, .about-section .about__about-3__right {
+  width: 90%;
+  height: 350px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .skills {
@@ -701,7 +787,6 @@ section {
   width: 90%;
   height: 400px;
   margin: 10px 10px;
-  color: #fff;
   overflow: hidden;
   pointer-events: none;
 }
@@ -738,7 +823,7 @@ Stylesheet: 600px以上のタブレットやモニタで適用
   .font-sm, .profile__right__profile-wrapper .profile-my-background, .profile__right__profile-wrapper .profile-intro, .skills__skills-wrapper__skill-1 .skill-body, .skills__skills-wrapper__skill-2 .skill-body, .skills__skills-wrapper__skill-3 .skill-body {
     font-size: 12px;
   }
-  .font-md, .h-fade-in__body, .profile__right__profile-wrapper .profile-en-name, .skills__skills-wrapper__skill-1 .skill-title, .skills__skills-wrapper__skill-2 .skill-title, .skills__skills-wrapper__skill-3 .skill-title {
+  .font-md, .nav ul a, .h-fade-in__body, .profile__right__profile-wrapper .profile-en-name, .about-section .about__about-header, .skills__skills-wrapper__skill-1 .skill-title, .skills__skills-wrapper__skill-2 .skill-title, .skills__skills-wrapper__skill-3 .skill-title {
     font-size: 16px;
   }
   .font-lr {
@@ -771,15 +856,16 @@ Stylesheet: 600px以上のタブレットやモニタで適用
     letter-spacing: 3px;
   }
   .profile__left .profile-icon {
+    top: 180px;
     left: 15%;
-    width: 300px;
-    height: 250px;
+    width: 370px;
+    height: 300px;
   }
   .profile__right__profile-wrapper .profile-en-name {
     margin: 7px 5% 0 auto;
   }
   .profile__right__profile-wrapper .profile-my-background {
-    top: 0%;
+    top: 2%;
     right: 10px;
   }
   .profile__right__profile-wrapper .profile-intro {
@@ -802,7 +888,7 @@ Stylesheet: 960px以上のモニタで適用
   .font-sm, .profile__right__profile-wrapper .profile-my-background, .profile__right__profile-wrapper .profile-intro, .skills__skills-wrapper__skill-1 .skill-body, .skills__skills-wrapper__skill-2 .skill-body, .skills__skills-wrapper__skill-3 .skill-body {
     font-size: 13px;
   }
-  .font-md, .h-fade-in__body, .profile__right__profile-wrapper .profile-en-name, .skills__skills-wrapper__skill-1 .skill-title, .skills__skills-wrapper__skill-2 .skill-title, .skills__skills-wrapper__skill-3 .skill-title {
+  .font-md, .nav ul a, .h-fade-in__body, .profile__right__profile-wrapper .profile-en-name, .about-section .about__about-header, .skills__skills-wrapper__skill-1 .skill-title, .skills__skills-wrapper__skill-2 .skill-title, .skills__skills-wrapper__skill-3 .skill-title {
     font-size: 18px;
   }
   .font-lr {
@@ -852,20 +938,24 @@ Stylesheet: 960px以上のモニタで適用
     padding: 66px 0;
   }
   .profile__left .profile-icon {
-    top: -20%;
-    left: 5%;
+    top: 150px;
+    left: 10%;
     width: 330px;
     height: 450px;
   }
   .profile__right__profile-wrapper .profile-name {
     margin: 30px 3% 0 auto;
   }
-  .profile__right__profile-wrapper .profile-my-background {
-    top: 0%;
-    right: 7px;
-  }
   .profile__right__profile-wrapper .profile-en-name {
     margin: 7px 3% 0 auto;
+  }
+  .profile__right__profile-wrapper .profile-my-background {
+    top: 2%;
+    right: -1%;
+  }
+  .about {
+    z-index: 2;
+    margin-bottom: 200px;
   }
   .skills {
     margin-top: 150px;
@@ -882,6 +972,14 @@ Stylesheet: 960px以上のモニタで適用
   }
   .skills__skills-wrapper__skill-1 .skill-body, .skills__skills-wrapper__skill-2 .skill-body, .skills__skills-wrapper__skill-3 .skill-body {
     margin: 0 30px;
+  }
+  .skills__skills-wrapper__skill-2 {
+    -webkit-transition-delay: .3s;
+            transition-delay: .3s;
+  }
+  .skills__skills-wrapper__skill-3 {
+    -webkit-transition-delay: .6s;
+            transition-delay: .6s;
   }
 }
 
